crates/review-buddy/tests/snapshots/frames_v02__frame_dashboard_gitlab_tab_no_color_100x30.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  demo · 4 sources · 7 changes                                           Liminal HQ
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────────────────────────────────────────────────────────╮
│  Worth a look · 1                                                                                │
│▌ ✕ Cache pipeline status lookups                                                              7h │
│▌ GL flow!1182 · priya · you're mentioned                                                         │
│                                                                                                  │
│  ▸ Noise · 1 bot update · ⏎ to expand                                                            │
│                                                                                                  │
│  ── That's everything.                                                                           │
│  2 in this view.                                                                                 │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ platform/flow!1182 ─────────────────────────────────────────────────────────────────────────── ▼ ╮
│ Cache pipeline status lookups                                                                    │
│ priya wants priya/status-cache → main                                                            │
│ +8 −2 · 1 file · opened 2d ago                                                                   │
│ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                                         │
│  Overview   Files 1   Checks 3   Conversation 0                                                  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────── │
│ The status panel asks for the same pipeline many times a second. This keeps results for a short  │
│ time to coax the load down. @smorris, does the TTL look right to you?                            │
│                                                                                                  │
│ Reviewers                                       Checks                                           │
│ ◌ tomas requested                               ● 2 passing  ✕ 1 failing                         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  demo · 4 sources · 7 changes"
0:88 D " Liminal HQ"
1:1 BD " 1 ●"
1:6 D "All 7"
1:13 BD " 2"
1:16 D "● liminal-hq 3"
1:32 BD " 3"
1:35 D "● smorris 1"
1:48 BR " 4 ● platform 2"
1:65 BD " 5"
1:68 D "● gitlab.com 1"
2:0 B "╭ queue ───────────────────────────────────────────────────────────────────────────────────────────╮"
3:0 B "│"
3:3 B "Worth a look"
3:15 D " · 1"
3:99 B "│"
4:0 B "│"
4:1 BR "▌ ✕ Cache pipeline status lookups"
4:34 R ""
4:96 DR "7h"
4:99 B "│"
5:0 B "│"
5:1 BR "▌"
5:3 R "GL flow!1182"
5:15 DR " ·"
5:18 R "priya"
5:23 DR " · you're mentioned"
5:42 R ""
5:99 B "│"
6:0 B "│"
6:99 B "│"
7:0 B "│"
7:3 D "▸ Noise · 1 bot update · ⏎ to expand"
7:99 B "│"
8:0 B "│"
8:99 B "│"
9:0 B "│"
9:3 D "── That's everything."
9:99 B "│"
10:0 B "│"
10:3 D "2 in this view."
10:99 B "│"
11:0 B "│"
11:99 B "│"
12:0 B "│"
12:99 B "│"
13:0 B "│"
13:99 B "│"
14:0 B "│"
14:99 B "│"
15:0 B "╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
16:0 D "╭ platform/flow!1182 ─────────────────────────────────────────────────────────────────────────── ▼ ╮"
17:0 D "│"
17:2 B "Cache pipeline status lookups"
17:99 D "│"
18:0 D "│"
18:7 D " wants"
18:32 D " →"
18:99 D "│"
19:0 D "│"
19:5 B "−2"
19:7 D " · 1 file · opened 2d ago"
19:99 D "│"
20:0 D "│"
20:2 B "a"
20:13 B "x"
20:32 B "c"
20:43 B "⏎"
20:51 B "m"
20:99 D "│"
21:0 D "│"
21:2 BR " Overview"
21:13 D " Files 1"
21:23 D " Checks 3"
21:34 D " Conversation 0"
21:99 D "│"
22:0 D "│"
22:2 D "────────────────────────────────────────────────────────────────────────────────────────────────"
22:99 D "│"
23:0 D "│"
23:99 D "│"
24:0 D "│"
24:99 D "│"
25:0 D "│"
25:99 D "│"
26:0 D "│"
26:99 D "│"
27:0 D "│"
27:2 D "◌"
27:9 D " requested"
27:63 B "✕ 1 failing"
27:99 D "│"
28:0 D "╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
29:1 B "⏎"
29:2 D " diff"
29:9 B "o"
29:10 D " open"
29:17 B "y"
29:18 D " copy"
29:25 B "s"
29:26 D " show filters"
29:41 B "?"
29:42 D " help"
29:49 B "T"
29:50 D " theme"
29:58 B "q"
29:59 D " quit"
