crates/review-buddy/tests/snapshots/frames_v02__frame_dashboard_gitlab_tab_no_color_160x40.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮╭ platform/flow!1182 ────────────────────────────────────────────────────────────────╮
│  ● All               7 ││  Worth a look · 1                            ││ Cache pipeline status lookups                                                      │
│    every source        ││▌ ✕ Cache pipeline status lookups          7h ││ priya wants priya/status-cache → main                                              │
│  ● liminal-hq        3 ││▌ GL flow!1182 · priya · you're mentioned     ││ +8 −2 · 1 file · opened 2d ago                                                     │
│    github.com          ││                                              ││                                                                                    │
│  ● smorris           1 ││  ▸ Noise · 1 bot update · ⏎ to expand        ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                           │
│    github.com          ││                                              ││                                                                                    │
│▌ ● platform          2 ││  ── That's everything.                       ││  Overview   Files 1   Checks 3   Conversation 0                                    │
│    gitlab.platform.ex… ││  2 in this view.                             ││ ────────────────────────────────────────────────────────────────────────────────── │
│  ● gitlab.com        1 ││                                              ││ The status panel asks for the same pipeline many times a second. This keeps        │
│    gitlab.com          ││                                              ││ results for a short time to coax the load down. @smorris, does the TTL look right  │
│                        ││                                              ││ to you?                                                                            │
│  Show  s to change     ││                                              ││                                                                                    │
│  [x] reviewing         ││                                              ││ Reviewers                                Checks                                    │
│  [x] assigned          ││                                              ││ ◌ tomas requested                        ● 2 passing  ✕ 1 failing                  │
│  [x] authored          ││                                              ││                                                                                    │
│  [ ] drafts            ││                                              ││ Latest comment                                                                     │
│  [ ] noise             ││                                              ││ No comments yet                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││ Your review  not started                                                           │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
╰────────────────────────╯╰──────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  demo · 4 sources · 7 changes"
0:148 D " Liminal HQ"
1:0 D "╭ sources ───────────────╮"
1:26 B "╭ queue ───────────────────────────────────────╮"
1:74 D "╭ platform/flow!1182 ────────────────────────────────────────────────────────────────╮"
2:0 D "│"
2:3 B "●"
2:23 D "7 │"
2:26 B "│"
2:29 B "Worth a look"
2:41 D " · 1"
2:73 B "│"
2:74 D "│"
2:76 B "Cache pipeline status lookups"
2:159 D "│"
3:0 D "│"
3:5 D "every source"
3:25 D "│"
3:26 B "│"
3:27 BR "▌ ✕ Cache pipeline status lookups"
3:60 R ""
3:70 DR "7h"
3:73 B "│"
3:74 D "│"
3:81 D " wants"
3:106 D " →"
3:159 D "│"
4:0 D "│"
4:23 D "3 │"
4:26 B "│"
4:27 BR "▌"
4:29 R "GL flow!1182"
4:41 DR " ·"
4:44 R "priya"
4:49 DR " · you're mentioned"
4:68 R ""
4:73 B "│"
4:74 D "│"
4:79 B "−2"
4:81 D " · 1 file · opened 2d ago"
4:159 D "│"
5:0 D "│"
5:5 D "github.com"
5:25 D "│"
5:26 B "│"
5:73 B "│"
5:74 D "│"
5:159 D "│"
6:0 D "│"
6:23 D "1 │"
6:26 B "│"
6:29 D "▸ Noise · 1 bot update · ⏎ to expand"
6:73 B "│"
6:74 D "│"
6:76 B "a"
6:87 B "x"
6:106 B "c"
6:117 B "⏎"
6:125 B "m"
6:159 D "│"
7:0 D "│"
7:5 D "github.com"
7:25 D "│"
7:26 B "│"
7:73 B "│"
7:74 D "│"
7:159 D "│"
8:0 D "│"
8:1 DR "▌"
8:3 R "●"
8:5 BR "platform"
8:13 R ""
8:23 DR "2"
8:25 D "│"
8:26 B "│"
8:29 D "── That's everything."
8:73 B "│"
8:74 D "│"
8:76 BR " Overview"
8:87 D " Files 1"
8:97 D " Checks 3"
8:108 D " Conversation 0"
8:159 D "│"
9:0 D "│"
9:1 R ""
9:5 DR "gitlab.platform.ex…"
9:24 R ""
9:25 D "│"
9:26 B "│"
9:29 D "2 in this view."
9:73 B "│"
9:74 D "│"
9:76 D "──────────────────────────────────────────────────────────────────────────────────"
9:159 D "│"
10:0 D "│"
10:23 D "1 │"
10:26 B "│"
10:73 B "│"
10:74 D "│"
10:159 D "│"
11:0 D "│"
11:5 D "gitlab.com"
11:25 D "│"
11:26 B "│"
11:73 B "│"
11:74 D "│"
11:159 D "│"
12:0 D "│"
12:25 D "│"
12:26 B "│"
12:73 B "│"
12:74 D "│"
12:159 D "│"
13:0 D "│"
13:3 BD "Show"
13:7 D "  s to change"
13:25 D "│"
13:26 B "│"
13:73 B "│"
13:74 D "│"
13:159 D "│"
14:0 D "│"
14:25 D "│"
14:26 B "│"
14:73 B "│"
14:74 D "│"
14:159 D "│"
15:0 D "│"
15:25 D "│"
15:26 B "│"
15:73 B "│"
15:74 D "│"
15:76 D "◌"
15:83 D " requested"
15:130 B "✕ 1 failing"
15:159 D "│"
16:0 D "│"
16:25 D "│"
16:26 B "│"
16:73 B "│"
16:74 D "│"
16:159 D "│"
17:0 D "│"
17:3 D "[ ] drafts"
17:25 D "│"
17:26 B "│"
17:73 B "│"
17:74 D "│"
17:76 BD "Latest comment"
17:159 D "│"
18:0 D "│"
18:3 D "[ ] noise"
18:25 D "│"
18:26 B "│"
18:73 B "│"
18:74 D "│"
18:76 D "No comments yet"
18:159 D "│"
19:0 D "│"
19:25 D "│"
19:26 B "│"
19:73 B "│"
19:74 D "│"
19:159 D "│"
20:0 D "│"
20:25 D "│"
20:26 B "│"
20:73 B "│"
20:74 D "│"
20:76 D "Your review"
20:159 D "│"
21:0 D "│"
21:25 D "│"
21:26 B "│"
21:73 B "│"
21:74 D "│"
21:159 D "│"
22:0 D "│"
22:25 D "│"
22:26 B "│"
22:73 B "│"
22:74 D "│"
22:159 D "│"
23:0 D "│"
23:25 D "│"
23:26 B "│"
23:73 B "│"
23:74 D "│"
23:159 D "│"
24:0 D "│"
24:25 D "│"
24:26 B "│"
24:73 B "│"
24:74 D "│"
24:159 D "│"
25:0 D "│"
25:25 D "│"
25:26 B "│"
25:73 B "│"
25:74 D "│"
25:159 D "│"
26:0 D "│"
26:25 D "│"
26:26 B "│"
26:73 B "│"
26:74 D "│"
26:159 D "│"
27:0 D "│"
27:25 D "│"
27:26 B "│"
27:73 B "│"
27:74 D "│"
27:159 D "│"
28:0 D "│"
28:25 D "│"
28:26 B "│"
28:73 B "│"
28:74 D "│"
28:159 D "│"
29:0 D "│"
29:25 D "│"
29:26 B "│"
29:73 B "│"
29:74 D "│"
29:159 D "│"
30:0 D "│"
30:25 D "│"
30:26 B "│"
30:73 B "│"
30:74 D "│"
30:159 D "│"
31:0 D "│"
31:25 D "│"
31:26 B "│"
31:73 B "│"
31:74 D "│"
31:159 D "│"
32:0 D "│"
32:25 D "│"
32:26 B "│"
32:73 B "│"
32:74 D "│"
32:159 D "│"
33:0 D "│"
33:25 D "│"
33:26 B "│"
33:73 B "│"
33:74 D "│"
33:159 D "│"
34:0 D "│"
34:25 D "│"
34:26 B "│"
34:73 B "│"
34:74 D "│"
34:159 D "│"
35:0 D "│"
35:25 D "│"
35:26 B "│"
35:73 B "│"
35:74 D "│"
35:159 D "│"
36:0 D "│"
36:25 D "│"
36:26 B "│"
36:73 B "│"
36:74 D "│"
36:159 D "│"
37:0 D "│"
37:25 D "│"
37:26 B "│"
37:73 B "│"
37:74 D "│"
37:159 D "│"
38:0 D "╰────────────────────────╯"
38:26 B "╰──────────────────────────────────────────────╯"
38:74 D "╰────────────────────────────────────────────────────────────────────────────────────╯"
39:1 B "⏎"
39:2 D " diff"
39:9 B "o"
39:10 D " open"
39:17 B "y"
39:18 D " copy"
39:25 B "s"
39:26 D " show filters"
39:41 B "?"
39:42 D " help"
39:49 B "T"
39:50 D " theme"
39:58 B "q"
39:59 D " quit"
