crates/review-buddy/tests/snapshots/frames_v02__frame_dashboard_strip_liminal_hq_129x40.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                        Liminal HQ
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────╮╭ liminal-hq/review-buddy#214 ──────────────────────────────────────────────────╮
│  Waiting on you · 2                          ││ Add a menu bar and keyboard-driven menus                                      │
│▌ ◐ Add a menu bar and keyboard-driven me… 2h ││ ada wants ada/menus → main                                                    │
│▌ GH review-buddy#214 · ada · review requested││ +32 −1 · 3 files · opened 3d ago                                              │
│  ● Raise muted text contrast in the ligh… 5h ││                                                                               │
│  GH review-buddy#209 · jo · approved by you  ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                      │
│                                              ││                                                                               │
│  Worth a look · 2                            ││  Overview   Files 3   Checks 6   Conversation 3                               │
│  ✕ Cache pipeline status lookups          7h ││ ───────────────────────────────────────────────────────────────────────────── │
│  GL flow!1182 · priya · you're mentioned     ││ Adds a menu bar along the top and a Menu type that tracks the selected item.  │
│  ● Tidy zsh startup                       1d ││                                                                               │
│  GH dotfiles#31 · smorris · yours            ││ • Menu::select_next and Menu::select_prev move the highlight                  │
│                                              ││ • Menu::activate returns the action for the highlighted item                  │
│  Can wait · 1                                ││ • The bar itself is a plain Line, so it picks up the active theme             │
│  · Clarify the install steps              3d ││                                                                               │
│  GL notes!12 · kai · approved by you         ││ Reviewers                             Checks                                  │
│                                              ││ ◌ smorris requested                   ● 2 passing  ◐ 1 running                │
│  ▸ Noise · 2 bot updates · ⏎ to expand       ││ ✎ jo commented                        ○ 1 neutral  ↷ 1 skipped  ⊘ 1 cancelled │
│                                              ││                                                                               │
│  ── That's everything.                       ││ Latest comment                                                                │
│  7 in this view.                             ││ jo · 5h ago · menubar.rs:7                                                    │
│                                              ││ These three lines could be one join. Is the intermediate Vec doing anything   │
│                                              ││ for us?                                                                       │
│                                              ││                                                                               │
│                                              ││ Your review  not started                                                      │
│                                              ││                                                                               │
│                                              ││                                                                               │
│                                              ││                                                                               │
│                                              ││                                                                               │
│                                              ││                                                                               │
│                                              ││                                                                               │
│                                              ││                                                                               │
│                                              ││                                                                               │
│                                              ││                                                                               │
│                                              ││                                                                               │
│                                              ││                                                                               │
╰──────────────────────────────────────────────╯╰───────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
