crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_1_welcome_afterglow_dark_100x30.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  first run                                                          Afterglow Dark








           ╭ Getting started ───────────────────────────────────────────────────────────╮
           │ Welcome to Review Buddy.                                                   │
           │ Every pull and merge request, in one quiet queue.                          │
           │                                                                            │
           │ Let's connect the accounts you already use. It takes about a minute, and   │
           │ nothing is saved until you say so.                                         │
           │                                                                            │
           │ Found 2 places you might want to connect.                                  │
           │                                                                            │
           │ [ Continue ⏎ ]  [ Skip for now · esc ]                                     │
           ╰────────────────────────────────────────────────────────────────────────────╯









 ⏎ continue  esc skip for now
